src/test/deca/context/invalid/homemade/tests/test331_print/test331_print2.deca
// test invalide de la règle 3.31


{
    boolean a;
    println(a);
}
